Development history / change log, please read from bottom up

Version 3.06 - xx yyy 2012
add JetiAdapter to analyze flight record data from Jeti transmitters
add Av4ms_FV_762 charger, matcher and cell selector for AA size cells
change time line behavior, start showing day > 72 hours
enable auto-save of a temporary file(s) each 5 minutes
build Windows NSIS installer


Version 3.05 - 18 Oct 2012
HoTTAdapter(2) - correct device XMLs to support current related statistics (number motor climbs vs gained height)
HottAdapter(2) - enable filter for current drops to zero above 10A (this hurts statistics calculation regarding trigger usage)
DevicePropertiesEditor - fix problem killing application due to SWT out of handles
HottAdapter(2) - enable/refine mx20, mc20 <-> mc32 model configuration files conversion 
HottAdapter(2) - fix time difference in table view to Firmware_Upgrade_grStudio
HottAdapter(2) - fix live data gathering receiver only
HottAdapter2 - fix reading channel data from bin while multiple sensors attached
UniLog - fix capacity calculation
GPS-Logger - fix UniLog2 sentence detection, UniLog may lazy start relative to GPS-Logger
Implement support for zip compression of OSD files
fixed [bug #37464] Title bar of "Device Properties Editor" shows "&"
fixed [bug #37302] File comment is reset when I move the mouse
fixed [bug #37460] DataExplorer triggers Microsoft Security Essentials
fixed [bug #37465] Keep selection in curves selector after pressing space
fixed [bug #37487] Strange bug when editing in the file comment tab, if deleted within the line
fixed [bug #37463] Close all dialogs with ESC key
fixed [bug #37462] Add shortcuts like e.g. Ctrl+s to save
fixed [bug #37568] Object characteristics doesn´t remember last used directory
fixed [bug #37466] Cursor handling in Table view
all devices importing data - refine import path handling, enable configuration using preferences